# ingest-tiki-crawler

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: autorestart.md  db-sqlalchemy.md  dev_report.md
src/: config.py  crawler.py  exceptions.py  main.py  schema.py  utils.py
src/database/: config.py  connect.py  exceptions.py  sql_client.py
src/database/orm/: client.py  connector.py  models.py
src/scripts/: init_db.py  run_load_db.py  run_load_db_orm.py
src/transformers/: __init__.py  cleaning.py  product.py
src/utils/: __init__.py  files.py  logger.py
tests/: test_utils.py
